【desktop】调整弹窗的标题高度

--- a/app/desktop/css/common/_dialog.scss
+++ b/app/desktop/css/common/_dialog.scss
@@ -12,11 +12,11 @@
 }
 
 .pkui-dialog-title {
-    padding: 12px;
+    padding: 6px 12px;
     color: #fff;
 }
 .pkui-dialog-title-icon {
-    margin: -1px 6px 0 0;
+    margin: -1px 10px 0 0;
     height: 20px;
     vertical-align: middle;
 }
@@ -27,7 +27,7 @@
     right: auto;
     border: 0;
     padding: 0;
-    margin: 14px 12px 0 0;
+    margin: 8px 12px 0 0;
     background-color: transparent;
     cursor: pointer;
     -webkit-appearance: none;
