--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -4199,12 +4199,12 @@ Pagination Styles
 }
 
 .pkui-dialog-title {
-  padding: 12px;
+  padding: 6px 12px;
   color: #fff;
 }
 
 .pkui-dialog-title-icon {
-  margin: -1px 6px 0 0;
+  margin: -1px 10px 0 0;
   height: 20px;
   vertical-align: middle;
 }
@@ -4216,7 +4216,7 @@ Pagination Styles
   right: auto;
   border: 0;
   padding: 0;
-  margin: 14px 12px 0 0;
+  margin: 8px 12px 0 0;
   background-color: transparent;
   cursor: pointer;
   -webkit-appearance: none;
@@ -4305,7 +4305,7 @@ Pagination Styles
 .win-aside-drawerToggler {
   float: left;
   padding: 0;
-  margin: 12px 0 0 20px;
+  margin: 12px 0 0 14px;
   border: none 0;
   background: none;
   cursor: pointer;
@@ -4325,7 +4325,7 @@ Pagination Styles
 
 .win-header-breadcrumbs {
   float: left;
-  margin: 10px 0 0 18px;
+  margin: 10px 0 0 10px;
 }
 
 .breadcrumb > .divider {
@@ -4340,7 +4340,7 @@ Pagination Styles
   top: 40px;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 240px;
   background-color: white;
   box-shadow: 5px 0 5px 0 rgba(0, 0, 0, 0.1);
 }
@@ -4351,16 +4351,19 @@ Pagination Styles
 .sidebar-menuItem:last-of-type {
   border-bottom: none 0;
 }
-.sidebar-menuItem:hover > .sidebar-menuItem-anchor, .sidebar-menuItem.active > .sidebar-menuItem-anchor {
+.sidebar-menuItem:hover > .sidebar-menuItem-anchor {
+  color: #fff;
+  background-color: #77c4ef;
+}
+.sidebar-menuItem.active > .sidebar-menuItem-anchor {
   color: #fff;
   background-color: #33a6e7;
 }
 
 .sidebar-menuItem-anchor {
   display: block;
-  padding: 8px 20px;
+  padding: 4px 10px;
   line-height: 24px;
-  font-size: 16px;
   color: #455469;
 }
 .sidebar-menuItem-anchor:before, .sidebar-menuItem-anchor:after {
@@ -4375,12 +4378,12 @@ Pagination Styles
   float: left;
   width: 24px;
   vertical-align: middle;
-  margin-right: 12px;
+  margin-right: .5em;
 }
 
 .sidebar-menuItem-text {
   float: left;
-  width: 180px;
+  width: 146px;
 }
 
 .sidebar-submenu > .sidebar-menuItem {
@@ -4388,13 +4391,13 @@ Pagination Styles
   border-top: solid 1px transparent;
 }
 .sidebar-submenu > .sidebar-menuItem .sidebar-menuItem-anchor {
-  padding-left: 52px;
+  padding-left: 40px;
 }
 
 .da-win-main {
   position: absolute;
   top: 40px;
-  left: 300px;
+  left: 240px;
   bottom: 0;
   right: 0;
 }
@@ -4403,7 +4406,7 @@ Pagination Styles
 }
 
 .win-main-heading {
-  padding: 30px 20px 12px 20px;
+  padding: 10px 10px 6px 10px;
   border-bottom: solid 3px #fbfbfb;
   color: #455469;
 }
