【desktop】完成侧边栏静态效果，待抽取到模块

--- a/app/desktop/css/common/_css-sprite.scss
+++ b/app/desktop/css/common/_css-sprite.scss
@@ -139,3 +139,13 @@
     height: 40px;
     @include desktop-sprite(icon_dock_dropmenu_indicator);
 }
+.icon-sidebar-toggle-on {
+    width: 16px;
+    height: 16px;
+    @include desktop-sprite(icon_sidebar_toggle_on);
+}
+.icon-sidebar-toggle-off {
+    width: 16px;
+    height: 16px;
+    @include desktop-sprite(icon_sidebar_toggle_off);
+}
