--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -48,9 +48,19 @@
 @import "../../../src/lib/art-dialog/6.0.4.x/pkui-dialog";
 @import "common/dialog";
 
+// jquery ui
 @import "common/jquery-ui";
 
+// 窗口相关
 @import "page/win";
+
+// 字体图标
+@import "../../../src/css/font/font-awesome/4.7.0/font-awesome";
+
+// bootgrid
+@import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
+
 
 // 雪碧图（置于最下面，否则@extend的样式会提前）
 @import "common/css-sprite";
+
