--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -55,7 +55,7 @@
 @import "page/win";
 
 // 字体图标
-@import "../../../src/css/font/font-awesome/4.7.0/font-awesome";
+@import "../../../src/css/font/font-awesome/4.7.0/font-awesome.css";
 
 // bootgrid
 @import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
