--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -60,6 +60,9 @@
 // bootgrid
 @import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
 
+// 按钮
+@import "../../../src/css/common/btn";
+@import "common/btn";
 
 // 雪碧图（置于最下面，否则@extend的样式会提前）
 @import "common/css-sprite";
