【PKUI】字体图标改为<link> 引入

--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -54,8 +54,8 @@
 // 窗口相关
 @import "page/win";
 
-// 字体图标
-@import "../../../src/css/font/font-awesome/4.7.0/font-awesome.css";
+// 字体图标，页面引入
+// @import "../../../src/css/font/font-awesome/4.7.0/font-awesome.css";
 
 // bootgrid
 @import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
