【desktop】完成按钮样式
预设值了五种情景模式（default、primary、info、success、danger）

--- a/app/desktop/css/page/_win.scss
+++ b/app/desktop/css/page/_win.scss
@@ -168,4 +168,15 @@
 }
 
 .win-main-body {
+    padding: 0 12px;
+}
+.win-btnGroup {
+    padding: 12px;
+    margin: 0 -12px;
+    border-bottom: solid 1px #fbfbfb;
+    @include clearfix();
+    .btn {
+        float: left;
+        margin-right: 6px;
+    }
 }
