--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -69,6 +69,8 @@
 // drawer
 @import "../../../src/component/common/drawer/1.0.0/drawer";
 
+// loading
+
 // 雪碧图（置于最下面，否则@extend的样式会提前）
 @import "common/css-sprite";
 
