--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -1,16 +1,33 @@
-// bootstrap mixins
-@import "../../../src/css/bootstrap/3.3.6/bootstrap/mixins";
-
-@import "common/mixins";
+// mix
+@import "base/mixins";
 
 // 变量
-@import "page/variables";
+@import "base/variables";
+
+// bootstrap mixins
+@import "../../../src/css/bootstrap/3.3.6/bootstrap/mixins";
 
 // 基础样式
 @import "../../../src/css/base/1.0.0/base";
 
 // CSS3动画
 @import "../../../src/css/base/animate/3.5.1/animate";
+
+// art dialog
+@import "../../../src/lib/art-dialog/6.0.4.x/pkui-dialog";
+
+// bootgrid
+@import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
+
+// 按钮
+@import "../../../src/css/common/btn";
+
+// drawer
+@import "../../../src/component/common/drawer/1.0.0/drawer";
+
+// isloading
+@import "../../../src/lib/isloading/1.0.6.x/isloading";
+
 
 // 工具类
 @import "base/utilities";
@@ -24,10 +41,24 @@
 // 主题
 @import "common/theme";
 
-// 应用启动面板
-@import "common/launchpad";
+// 表单
+@import "common/form";
 
+// 轮播
 @import "common/swiper";
+
+// dialog
+@import "common/dialog";
+
+// jquery ui
+@import "common/jquery-ui";
+
+// 按钮
+@import "common/btn";
+
+
+// 应用启动面板
+@import "page/launchpad";
 
 // 骨架
 @import "page/skeleton";
@@ -35,39 +66,13 @@
 // 顶部条
 @import "page/topbar";
 
-// app-window
-//@import "../../../src/lib/layer/3.0.1.x/skin/default/layer";
-//@import "common/layer";
-
-
-// art dialog
-@import "../../../src/lib/art-dialog/6.0.4.x/pkui-dialog";
-@import "common/dialog";
-
-// jquery ui
-@import "common/jquery-ui";
-
 // 窗口相关
 @import "page/win";
 
-// 字体图标，页面引入
-// @import "../../../src/css/font/font-awesome/4.7.0/font-awesome.css";
 
-// bootgrid
-@import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
 
-// 按钮
-@import "../../../src/css/common/btn";
-@import "common/btn";
 
-// 网格系统（得用在边框盒模型中）
-//@import "../../../src/css/common/grid";
 
-// drawer
-@import "../../../src/component/common/drawer/1.0.0/drawer";
-
-// isloading
-@import "../../../src/lib/isloading/1.0.6.x/isloading";
 
 // 雪碧图（置于最下面，否则@extend的样式会提前）
 @import "common/css-sprite";
