--- a/app/desktop/css/page/_win.scss
+++ b/app/desktop/css/page/_win.scss
@@ -149,7 +149,7 @@
     left: 240px;
     bottom: 0;
     right: 0;
-    overflow: auto;
+    //overflow: auto;
 
     &.collapsed {
         left: 0;
@@ -170,6 +170,8 @@
 .win-main-body {
     padding: 0 12px;
     min-height: 100%;
+    height: 100%;
+    overflow: auto;
 }
 .win-btnGroup {
     padding: 12px;
