--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -28,6 +28,8 @@
 // isloading
 @import "../../../src/lib/isloading/1.0.6.x/isloading";
 
+// validator
+@import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
 
 // 工具类
 @import "base/utilities";
