【desktop】更新表单样式

--- a/app/desktop/css/common/_form.scss
+++ b/app/desktop/css/common/_form.scss
@@ -49,6 +49,10 @@
         -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
         box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
     }
+    // validator
+    &.n-invalid {
+        border-color: #c33;
+    }
 }
 .da-table {
     width: 100%;
@@ -105,3 +109,4 @@
     font-size: 90%;
     color: #888;
 }
+
