--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -29,7 +29,7 @@
 @import "../../../src/lib/isloading/1.0.6.x/isloading";
 
 // validator
-@import "../../../src/lib/bootgrid/1.3.1.x/jquery.bootgrid";
+@import "../../../src/lib/validator/1.0.10.x/jquery.validator";
 
 // 工具类
 @import "base/utilities";
