【PKUI】更新bootgrid的样式

--- a/src/lib/bootgrid/1.3.1.x/jquery.bootgrid.scss
+++ b/src/lib/bootgrid/1.3.1.x/jquery.bootgrid.scss
@@ -202,9 +202,8 @@
 
 }
 .pkui-grid-selectCell {
-
 }
-
+th.pkui-grid-selectCell,
 .pkui-grid-columnHeaderAnchor,
 .pkui-grid-cell {
     padding: 12px 6px;
