【PKUI】bootgrid：修复当调整列宽是导致的问题。

--- a/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.css
+++ b/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.css
@@ -186,10 +186,14 @@
   margin-right: 24px;
 }
 
-th.pkui-grid-selectCell,
+.pkui-grid-selectLabel,
 .pkui-grid-columnHeaderAnchor,
 .pkui-grid-cell {
   padding: 12px 6px;
+}
+
+.pkui-grid-cell > .pkui-grid-selectLabel {
+  padding: 0;
 }
 
 .pkui-grid-cell {
