--- a/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
+++ b/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
@@ -226,12 +226,15 @@
 }
 .pkui-grid-selectCell {
 }
-th.pkui-grid-selectCell,
+
+.pkui-grid-selectLabel,
 .pkui-grid-columnHeaderAnchor,
 .pkui-grid-cell {
     padding: 12px 6px;
 }
-
+.pkui-grid-cell > .pkui-grid-selectLabel {
+    padding: 0;
+}
 .pkui-grid-cell {
     overflow: hidden;
     -ms-text-overflow: ellipsis;
