--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -4580,10 +4580,14 @@ input[type="button"].btn-block {
   margin-right: 24px;
 }
 
-th.pkui-grid-selectCell,
+.pkui-grid-selectLabel,
 .pkui-grid-columnHeaderAnchor,
 .pkui-grid-cell {
   padding: 12px 6px;
+}
+
+.pkui-grid-cell > .pkui-grid-selectLabel {
+  padding: 0;
 }
 
 .pkui-grid-cell {
