【PKUI】bootgrid：扩展删除行的功能

--- a/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
+++ b/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
@@ -48,26 +48,29 @@
     * {
         @extend .border-box;
     }
-    thead {
+    > thead {
         font-size: 14px;
         color: #333;
         th {
             font-weight: bold;
         }
     }
-    td {
-        background-color: #f9f9f9;
-        border-bottom: solid 2px #fff;
-    }
-    th,
-    td {
-        //padding: 12px;
-    }
-    tr:hover {
-        td {
-            //color: #fff;
-            //background-color: #455469;
-            background-color: #e5e5e5;
+    > tbody {
+        > tr {
+            background-color: #f9f9f9;
+            > td {
+                border-bottom: solid 2px #fff;
+            }
+            &:hover,
+            &.active {
+                background-color: #e5e5e5;
+            }
+            &.deleted {
+                text-decoration: line-through;
+                color: #aaa;
+                cursor: not-allowed;
+                background-color: #f2dede;
+            }
         }
     }
 }
@@ -242,4 +245,5 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
 
