【PKUI】bootstrap tooltip：更新样式

--- a/src/css/bootstrap/3.3.6/tooltip.css
+++ b/src/css/bootstrap/3.3.6/tooltip.css
@@ -120,3 +120,8 @@
   border-width: 0 5px 5px;
   border-bottom-color: #f0eff0;
 }
+
+.tooltip-inner {
+  text-align: left;
+  word-break: break-all;
+}
