--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -4578,7 +4578,7 @@ select[multiple].input-lg,
  */
 .tooltip {
   position: absolute;
-  z-index: 1070;
+  z-index: 10000;
   display: block;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
@@ -4692,6 +4692,11 @@ select[multiple].input-lg,
   margin-top: -5px;
   border-width: 0 5px 5px;
   border-bottom-color: #f0eff0;
+}
+
+.tooltip-inner {
+  text-align: left;
+  word-break: break-all;
 }
 
 .pkui-drawer {
