--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -34,6 +34,9 @@
 //【pkui/css/bootstrap】bootstrap - alerts
 @import "../../../src/css/bootstrap/3.3.6/alerts";
 
+//【pkui/css/bootstrap】bootstrap - navs
+@import "../../../src/css/bootstrap/3.3.6/navs";
+
 //【pkui/component】drawer
 @import "../../../src/component/common/drawer/1.0.0/drawer";
 
