【PKUI】css：修改 navs样式

--- a/src/css/bootstrap/3.3.6/navs.css
+++ b/src/css/bootstrap/3.3.6/navs.css
@@ -161,3 +161,17 @@
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
+
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: #fff;
+}
+.tab-content:before, .tab-content:after {
+  content: " ";
+  display: table;
+}
+.tab-content:after {
+  clear: both;
+}
