--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -4949,6 +4949,20 @@ select[multiple].input-lg,
   border-top-left-radius: 0;
 }
 
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: #fff;
+}
+.tab-content:before, .tab-content:after {
+  content: " ";
+  display: table;
+}
+.tab-content:after {
+  clear: both;
+}
+
 .pkui-drawer {
   position: absolute;
   z-index: 10;
