--- a/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.css
+++ b/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.css
@@ -115,6 +115,12 @@
   padding: 10px;
 }
 
+.pkui-grid-actions {
+  position: absolute;
+  right: 0;
+  top: -20px;
+}
+
 .pkui-grid-input-group {
   position: relative;
   display: table;
