--- a/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
+++ b/src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid.scss
@@ -124,6 +124,9 @@
     padding: 10px;
 }
 .pkui-grid-actions {
+    position: absolute;
+    right: 0;
+    top: -20px;
 }
 .pkui-grid-input-group {
     position: relative;
