--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -44,7 +44,8 @@
 @import "../../../src/lib/component/art-dialog/6.0.4.x/pkui-dialog";
 
 //【pkui/lib/component】bootgrid
-@import "../../../src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid";
+//@import "../../../src/lib/component/bootgrid/1.3.1.x/jquery.bootgrid";
+@import "../../../src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui";
 
 //【pkui/lib/component】isloading
 @import "../../../src/lib/component/isloading/1.0.6.x/isloading";
@@ -93,6 +94,7 @@
 
 //【app/desktop】sysMenu菜单管理
 @import "page/sysMenu";
+
 
 
 //【app/desktop】雪碧图（置于最下面，否则@extend的样式会提前）
