【desktop】调整bootgrid的样式

--- a/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.scss
+++ b/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.scss
@@ -197,6 +197,7 @@
 }
 .pkui-grid-footer {
     padding-top: 20px;
+    padding-bottom: 10px;
     text-align: center;
     * {
         @extend .border-box;
