【PKUI】bootgrid：处理无totalRecord的情况。

--- a/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.css
+++ b/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.css
@@ -253,3 +253,10 @@
   opacity: 0.4;
   filter: alpha(opacity=40);
 }
+
+.no-totalRecords > .pkui-grid-pagination > .last {
+  display: none;
+}
+.no-totalRecords > .pkui-grid-infos {
+  display: none;
+}
