--- a/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.scss
+++ b/src/lib/component/bootgrid/1.3.1.x/bootgrid.easyui.scss
@@ -283,3 +283,13 @@
 .JCLRgrip:hover .pkui-grid-colresizable-grip {
     @include opacity(.4);
 }
+.no-totalRecords {
+    > .pkui-grid-pagination {
+        > .last {
+            display: none;
+        }
+    }
+    > .pkui-grid-infos {
+        display: none;
+    }
+}
