--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -7133,6 +7133,67 @@ Pagination Styles
   border-radius: 1px;
 }
 
+.pkui-search-popup {
+  display: none;
+  z-index: 20000;
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  width: 600px;
+  margin-left: -300px;
+  border-radius: 4px;
+  background: #d8e0ea;
+  box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.3);
+  font-size: 16px;
+  color: #333;
+  padding: 10px 0 10px 0;
+}
+
+.pkui-search-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 16px 10px 0 10px;
+}
+
+.pkui-search-input {
+  width: 500px;
+  height: 30px;
+  line-height: 30px;
+  border: none 0;
+  background: none;
+  text-indent: 36px;
+}
+
+.pkui-search-input:focus {
+  outline: none;
+}
+
+.pkui-search-popup .ui-autocomplete {
+  border-top: solid 1px #c9c6c3;
+}
+
+.pkui-search-popup .ui-menu-item {
+  line-height: 24px;
+  font-size: 14px;
+  color: #666;
+}
+
+.pkui-search-popup .ui-state-active {
+  color: #fff;
+  background-color: #115ebf;
+}
+
+.pkui-search-popup .ui-menu-item .fa {
+  width: 26px;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.pkui-search-popup .ui-menu-item strong {
+  color: #ff8000;
+}
+
 .da-win {
   position: absolute;
   top: 0;
