--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -6849,10 +6849,14 @@ Pagination Styles
   width: 76px;
   height: 76px;
   margin: 10px auto 0 auto;
+}
+
+.launchpad-shortcut-fonticon {
   line-height: 76px;
   text-align: center;
-  font-size: 60px;
+  font-size: 46px;
   color: #d4dae0;
+  background: url(../images/apps/fonticon_bg.png) no-repeat center center;
 }
 
 .launchpad-shortcut-title {
