【desktop】sidebar：完成更新后的页面显示

--- a/app/desktop/css/page/_topbar.scss
+++ b/app/desktop/css/page/_topbar.scss
@@ -259,7 +259,8 @@
     top: 46px;
     left: -240px;
     bottom: 0;
-    width: 240px;
+    width: 239px;
+    border-right: solid 1px #ddd;
     background-color: #fff;
 }
 .use-group {
