【desktop】/page/_topbar.scss：调整sidebar样式

--- a/app/desktop/css/page/_topbar.scss
+++ b/app/desktop/css/page/_topbar.scss
@@ -262,6 +262,7 @@
     width: 239px;
     border-right: solid 1px #ddd;
     background-color: #fff;
+    background-color: rgba(255,255,255,0.9);
 }
 .use-group {
 }
@@ -277,7 +278,7 @@
 }
 .use-group-often {
     padding-bottom: 24px;
-    border-bottom: solid 1px #ddd;
+    //border-bottom: solid 1px #ddd;
     margin-bottom: 10px;
 }
 .use-group-often .count {
