--- a/app/desktop/css/page/_topbar.scss
+++ b/app/desktop/css/page/_topbar.scss
@@ -209,6 +209,7 @@
     margin-left: -300px;
     border-radius: 4px;
     background: #d8e0ea;
+    background: rgba(255,255,255,0.9);
     box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.3);
 
     font-size: 16px;
