【desktop】style.css：添加日期时间控件的样式

--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -59,6 +59,9 @@
 //【pkui/lib/component】datepicker
 @import "../../../src/lib/component/datepicker/1.7.0.x/datepicker";
 
+//【pkui/lib/component】datetimepicker
+@import "../../../src/lib/component/datetimepicker/2.5.4.x/datetimepicker";
+
 //【app/desktop】工具类
 @import "base/utilities";
 
