【desktop】app-search.js：显示搜索框时，模糊主界面

--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -3,6 +3,10 @@
   position: relative;
 }
 
+.blur {
+  filter: blur(20px);
+}
+
 /*
 YUI 3.18.1 (build f7e7bcb)
 Copyright 2014 Yahoo! Inc. All rights reserved.
