--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -8754,25 +8754,51 @@ Pagination Styles
   box-sizing: border-box;
 }
 
-.win-btnGroup {
+.win-main-topbar {
   padding: 12px 0;
   border-bottom: solid 1px #fbfbfb;
 }
-.win-btnGroup:before, .win-btnGroup:after {
+.win-main-topbar:before, .win-main-topbar:after {
   content: " ";
   display: table;
 }
-.win-btnGroup:after {
+.win-main-topbar:after {
   clear: both;
 }
-.win-btnGroup > .btn {
-  float: left;
-  margin-right: 6px;
-}
-.win-btnGroup * {
+.win-main-topbar * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.win-main-topbar:after {
+  display: table;
+  content: " ";
+  clear: both;
+}
+
+.main-topbar-func {
+  float: left;
+}
+
+.main-topbar-query {
+  float: right;
+}
+
+.main-topbar-query .input-group-addon {
+  color: #108cee;
+  border-color: #d2ecfd;
+  background: #eaf6fe;
+}
+
+.main-topbar-query .da-form-control {
+  border-color: #d2ecfd;
+}
+
+.main-topbar-query .da-form-control:focus,
+.main-topbar-query .da-form-control:active,
+.main-topbar-query .da-form-control:hover {
+  border-color: #66afe9;
 }
 
 .pkui-icon-image {
