--- a/app/desktop/css/page/_win.scss
+++ b/app/desktop/css/page/_win.scss
@@ -199,6 +199,7 @@
         @include box-sizing(border-box);
     }
 }
+
 .win-main-topbar:after {
     display: table;
     content: " ";
@@ -209,9 +210,6 @@
 }
 .main-topbar-query {
     float: right;
-}
-.main-topbar-query {
-
 }
 .main-topbar-query .input-group-addon {
     color: #108cee;
@@ -225,6 +223,44 @@
 .main-topbar-query .da-form-control:active,
 .main-topbar-query .da-form-control:hover {
     border-color: #66afe9;
+}
+.main-topbar-query > form {
+
+    > .input-group {
+        float: left;
+        width: 280px;
+        margin-left: 6px;
+    }
+    > .btn {
+        float: left;
+        margin-left: 6px;
+    }
+    > input {
+        margin-left: 6px;
+    }
+    .da-form-radio {
+        height: 28px;
+        float: left;
+        border: solid 1px #d2ecfd;
+        .da-form-radio-label {
+            border-right: solid 1px #d2ecfd;
+            color: #108cee;
+            background: #eaf6fe;
+            padding: 6px 12px;
+            line-height: 1;
+            font-size: 14px;
+            height: 26px;
+            display: inline-block;
+        }
+        label {
+            margin-right: 6px;
+            margin-left: 6px;
+        }
+    }
+}
+.main-topbar-query-ext {
+    margin-top: 12px;
+    clear: both;
 }
 
 .pkui-icon-image {
