--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -7421,13 +7421,24 @@ b {
   background: url(../images/da_bg.png) 0 0 repeat-x #fff;
 }
 .da-theme-light .da-topbar {
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#3F7E9FC2', endColorstr='#3F7E9FC2');
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#BF7E9FC2', endColorstr='#BF7E9FC2');
+  top: auto;
+  bottom: 0;
+}
+.da-theme-light .da-desktop {
+  bottom: 46px;
+  top: 0;
+}
+.da-theme-light .da-sidebar {
+  top: 0;
+  bottom: 46px;
+  overflow: hidden;
 }
 
 :root .da-theme-light .da-topbar {
   filter: none;
   /*处理IE9浏览器中的滤镜效果*/
-  background-color: rgba(126, 159, 194, 0.25);
+  background-color: rgba(126, 159, 194, 0.75);
 }
 
 .da-form {
