【desktop】弹窗：调整样式，并修复最大化时可以拖拽改变大小的问题。

--- a/app/desktop/css/page/_win.scss
+++ b/app/desktop/css/page/_win.scss
@@ -71,7 +71,7 @@
                 display: none;
             }
             .win-main-body {
-                padding-top: 12px;
+                padding-top: 0;
                 background-color: #fafafa;
             }
         }
