--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -9124,7 +9124,7 @@ Pagination Styles
   padding: 6px;
 }
 
-.desktop-sprite, .icon-home, .topbar-home, .icon-history, .topbar-history, .icon-close, .dock-item-btn, .icon-dashboard, .icon-logout, .icon-message, .icon-more, .icon-search, .icon-user, .icon-triangle-down, .toolbar-item-indicator, .icon-add, .icon-setting, .icon-arrow-left, .launchpad-pagination-previous, .icon-arrow-right, .launchpad-pagination-next, .icon-arrow-light-left, .da-theme-light .launchpad-pagination-previous, .icon-arrow-light-right, .da-theme-light .launchpad-pagination-next, .icon-circle-1, .icon-circle-2, .icon-win-close, .pkui-dialog-close, .icon-win-close-hover, .icon-win-max, .pkui-dialog-max, .icon-win-max-hover, .icon-win-maxmin, .pkui-dialog-restore, .icon-win-maxmin-hover, .icon-win-min, .pkui-dialog-min, .icon-win-min-hover, .icon-dock-dropmenu-indicator, .dock-dropmenu-indicator, .icon-sidebar-toggle-on, .icon-sidebar-toggle-off {
+.desktop-sprite, .icon-home, .topbar-home, .icon-history, .topbar-history, .icon-close, .dock-item-btn, .icon-dashboard, .icon-logout, .icon-message, .icon-more, .icon-search, .icon-user, .icon-triangle-down, .toolbar-item-indicator, .icon-add, .icon-setting, .icon-arrow-left, .launchpad-pagination-previous, .icon-arrow-right, .launchpad-pagination-next, .icon-arrow-light-left, .da-theme-light .launchpad-pagination-previous, .icon-arrow-light-right, .da-theme-light .launchpad-pagination-next, .icon-circle-1, .icon-circle-2, .icon-win-close, .pkui-dialog-close, .icon-win-close-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-close, .icon-win-max, .pkui-dialog-max, .icon-win-max-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-max, .icon-win-maxmin, .pkui-dialog-restore, .icon-win-maxmin-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-restore, .icon-win-min, .pkui-dialog-min, .icon-win-min-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-min, .icon-dock-dropmenu-indicator, .dock-dropmenu-indicator, .icon-sidebar-toggle-on, .icon-sidebar-toggle-off {
   background-image: url('../images/desktop-sac1ba4ec60.png');
   background-repeat: no-repeat;
 }
@@ -9258,7 +9258,7 @@ Pagination Styles
   background-position: 0 -852px;
 }
 
-.icon-win-close-hover {
+.icon-win-close-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-close {
   width: 16px;
   height: 16px;
   background-position: 0 -852px;
@@ -9273,7 +9273,7 @@ Pagination Styles
   background-position: 0 -884px;
 }
 
-.icon-win-max-hover {
+.icon-win-max-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-max {
   width: 16px;
   height: 16px;
   background-position: 0 -884px;
@@ -9288,7 +9288,7 @@ Pagination Styles
   background-position: 0 -916px;
 }
 
-.icon-win-maxmin-hover {
+.icon-win-maxmin-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-restore {
   width: 16px;
   height: 16px;
   background-position: 0 -916px;
@@ -9303,7 +9303,7 @@ Pagination Styles
   background-position: 0 -948px;
 }
 
-.icon-win-min-hover {
+.icon-win-min-hover, .da-theme-light .pkui-dialog-header:hover .pkui-dialog-min {
   width: 16px;
   height: 16px;
   background-position: 0 -948px;
