--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -8899,7 +8899,7 @@ Pagination Styles
 
 .sysmenu-treeOpe {
   position: absolute;
-  top: 40px;
+  top: 0;
   left: 0;
   z-index: 10;
   width: 240px;
