--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -8605,6 +8605,22 @@ Pagination Styles
 .da-theme-light .topbar-dock-item {
   border-radius: 2px;
 }
+.da-theme-light .topbar-toolbar-userItem .dropdown-menu {
+  top: auto;
+  bottom: 100%;
+}
+.da-theme-light .topbar-toolbar-userItem .dropdown-menu:before {
+  top: auto;
+  bottom: -16px;
+  border-bottom-color: transparent;
+  border-top-color: rgba(27, 31, 35, 0.15);
+}
+.da-theme-light .topbar-toolbar-userItem .dropdown-menu:after {
+  top: auto;
+  bottom: -14px;
+  border-bottom-color: transparent;
+  border-top-color: #fff;
+}
 
 .da-win {
   position: absolute;
