--- a/app/desktop/css/page/_win.scss
+++ b/app/desktop/css/page/_win.scss
@@ -300,10 +300,18 @@
 
     }
     .win-main-heading {
+        border-bottom: solid 1px #d4d4d4;
         background-color: #e9e8e9;
+        background-color: rgba(233, 232, 233, 0.95);
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.85);
     }
     .pkui-dialog-body {
         background: #e9e8e9;
         border-radius: 0 0 4px 4px;
+    }
+    .da-win-sidebar-toggle {
+        color: #455469;
+        background-color: #e9e8e9;
+        background-color: rgba(233, 232, 233, 0.95);
     }
 }
