--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -8920,11 +8920,19 @@ Pagination Styles
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.6) inset;
 }
 .da-theme-light .win-main-heading {
+  border-bottom: solid 1px #d4d4d4;
   background-color: #e9e8e9;
+  background-color: rgba(233, 232, 233, 0.95);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.85);
 }
 .da-theme-light .pkui-dialog-body {
   background: #e9e8e9;
   border-radius: 0 0 4px 4px;
+}
+.da-theme-light .da-win-sidebar-toggle {
+  color: #455469;
+  background-color: #e9e8e9;
+  background-color: rgba(233, 232, 233, 0.95);
 }
 
 .sysmenu-container {
