--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -8797,6 +8797,19 @@ Pagination Styles
   color: #ff8000;
 }
 
+.pkui-search-backdrop {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 19999;
+  background-color: #000;
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+
 .da-sidebar {
   z-index: 6000;
   position: absolute;
