--- a/src/component/common/textMagnifier/1.0.0/textMagnifier.css
+++ b/src/component/common/textMagnifier/1.0.0/textMagnifier.css
@@ -4,7 +4,7 @@
   position: absolute;
   border: solid 1px transparent;
   padding: 6px;
-  font-size: 18px;
+  font-size: 20px;
 }
 .text-magnifier.success {
   color: #3c763d;
@@ -25,4 +25,11 @@
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
+}
+
+.text-magnifier-tips {
+  font-size: 12px;
+  border-top: dashed 1px;
+  margin-top: 2px;
+  padding-top: 2px;
 }
