--- a/src/component/logic/message/1.0.0/message.scss
+++ b/src/component/logic/message/1.0.0/message.scss
@@ -1,7 +1,7 @@
 // 临时设置
 
 .da-theme-light .da-top {
-    z-index: 3;
+    //z-index: 3;
 }
 
 .pkui-message {
@@ -21,6 +21,7 @@
 }
 .pkui-message-popup {
     position: absolute;
+    z-index: 3;
     top: 100%;
     left: 0;
     line-height: 1.35;
@@ -30,7 +31,6 @@
 .pkui-message-panel {
     position: relative;
     width: 300px;
-    min-height: 200px;
     margin-top: 4px;
     margin-bottom: 20px;
     overflow: hidden;
@@ -76,7 +76,8 @@
     }
 }
 .pkui-message-panel-body {
-    background-color: #f6f8fa;
+    background-color: #fff;
+    min-height: 200px;
 }
 .pkui-message-menu {
 
@@ -84,6 +85,7 @@
 .pkui-message-menu-tabs {
     padding: 8px 10px 0 10px;
     border-bottom: 1px solid #dfe2e5;
+    background-color: #f6f8fa;
 }
 .pkui-message-menu-tab {
     display: inline-block;
@@ -118,6 +120,7 @@
     background: #fff;
 }
 .pkui-message-menu-list {
+    display: none;
     position: relative;
     max-height: 400px;
     overflow: auto;
@@ -152,7 +155,7 @@
     //font-size: 12px;
     text-align: right;
     background: #f6f8fa;
-    border-bottom: 1px solid #e1e4e8;
+    border-top: 1px solid #e1e4e8;
 }
 .pkui-message-more {
 
